bindings/python/malamute/_malamute_ctypes.py


    def status_reason(self):
        """
        Get the status_reason field
        """
        return lib.mlm_proto_status_reason(self._as_parameter_)

    def set_status_reason(self, status_reason):
        """
        Set the status_reason field
        """
        return lib.mlm_proto_set_status_reason(self._as_parameter_, status_reason)

    def amount(self):
        """
        Get the amount field
        """
        return lib.mlm_proto_amount(self._as_parameter_)

    def set_amount(self, amount):
        """
        Set the amount field
        """
        return lib.mlm_proto_set_amount(self._as_parameter_, amount)

    @staticmethod
    def test(verbose):
        """
        Self test of this class.
        """
        return lib.mlm_proto_test(verbose)


# mlm_client
lib.mlm_client_new.restype = mlm_client_p
lib.mlm_client_new.argtypes = []
lib.mlm_client_destroy.restype = None
lib.mlm_client_destroy.argtypes = [POINTER(mlm_client_p)]
lib.mlm_client_actor.restype = czmq.zactor_p
lib.mlm_client_actor.argtypes = [mlm_client_p]
lib.mlm_client_msgpipe.restype = czmq.zsock_p
lib.mlm_client_msgpipe.argtypes = [mlm_client_p]
lib.mlm_client_connected.restype = c_bool
lib.mlm_client_connected.argtypes = [mlm_client_p]
lib.mlm_client_set_plain_auth.restype = c_int
lib.mlm_client_set_plain_auth.argtypes = [mlm_client_p, c_char_p, c_char_p]
lib.mlm_client_connect.restype = c_int
lib.mlm_client_connect.argtypes = [mlm_client_p, c_char_p, c_int, c_char_p]
lib.mlm_client_set_producer.restype = c_int
lib.mlm_client_set_producer.argtypes = [mlm_client_p, c_char_p]
lib.mlm_client_set_consumer.restype = c_int
lib.mlm_client_set_consumer.argtypes = [mlm_client_p, c_char_p, c_char_p]
lib.mlm_client_set_worker.restype = c_int
lib.mlm_client_set_worker.argtypes = [mlm_client_p, c_char_p, c_char_p]
lib.mlm_client_send.restype = c_int
lib.mlm_client_send.argtypes = [mlm_client_p, c_char_p, POINTER(czmq.zmsg_p)]
lib.mlm_client_sendto.restype = c_int
lib.mlm_client_sendto.argtypes = [mlm_client_p, c_char_p, c_char_p, c_char_p, c_int, POINTER(czmq.zmsg_p)]
lib.mlm_client_sendfor.restype = c_int
lib.mlm_client_sendfor.argtypes = [mlm_client_p, c_char_p, c_char_p, c_char_p, c_int, POINTER(czmq.zmsg_p)]
lib.mlm_client_recv.restype = czmq.zmsg_p
lib.mlm_client_recv.argtypes = [mlm_client_p]
lib.mlm_client_command.restype = c_char_p
lib.mlm_client_command.argtypes = [mlm_client_p]
lib.mlm_client_status.restype = c_int
lib.mlm_client_status.argtypes = [mlm_client_p]
lib.mlm_client_reason.restype = c_char_p
lib.mlm_client_reason.argtypes = [mlm_client_p]
lib.mlm_client_address.restype = c_char_p
lib.mlm_client_address.argtypes = [mlm_client_p]
lib.mlm_client_sender.restype = c_char_p
lib.mlm_client_sender.argtypes = [mlm_client_p]
lib.mlm_client_subject.restype = c_char_p
lib.mlm_client_subject.argtypes = [mlm_client_p]
lib.mlm_client_content.restype = czmq.zmsg_p
lib.mlm_client_content.argtypes = [mlm_client_p]
lib.mlm_client_tracker.restype = c_char_p
lib.mlm_client_tracker.argtypes = [mlm_client_p]
lib.mlm_client_sendx.restype = c_int
lib.mlm_client_sendx.argtypes = [mlm_client_p, c_char_p, c_char_p]
lib.mlm_client_sendtox.restype = c_int
lib.mlm_client_sendtox.argtypes = [mlm_client_p, c_char_p, c_char_p, c_char_p]
lib.mlm_client_sendforx.restype = c_int
lib.mlm_client_sendforx.argtypes = [mlm_client_p, c_char_p, c_char_p, c_char_p]
lib.mlm_client_recvx.restype = c_int
lib.mlm_client_recvx.argtypes = [mlm_client_p, POINTER(c_char_p), POINTER(c_char_p)]
lib.mlm_client_set_verbose.restype = None
lib.mlm_client_set_verbose.argtypes = [mlm_client_p, c_bool]
lib.mlm_client_test.restype = None
lib.mlm_client_test.argtypes = [c_bool]

class MlmClient(object):
    """
    Malamute Client

    Codec class for mlm_client.
    """

    allow_destruct = False
    def __init__(self, *args):
        """
        Create a new mlm_client, return the reference if successful,
or NULL if construction failed due to lack of available memory.
        """
        if len(args) == 2 and type(args[0]) is c_void_p and isinstance(args[1], bool):
            self._as_parameter_ = cast(args[0], mlm_client_p) # Conversion from raw type to binding
            self.allow_destruct = args[1] # This is a 'fresh' value, owned by us
        elif len(args) == 2 and type(args[0]) is mlm_client_p and isinstance(args[1], bool):
            self._as_parameter_ = args[0] # Conversion from raw type to binding
            self.allow_destruct = args[1] # This is a 'fresh' value, owned by us
        else:
            assert(len(args) == 0)
            self._as_parameter_ = lib.mlm_client_new() # Creation of new raw type
            self.allow_destruct = True

    def __del__(self):
        """
        Destroy the mlm_client and free all memory used by the object.
        """
        if self.allow_destruct:
            lib.mlm_client_destroy(byref(self._as_parameter_))

    def __eq__(self, other):
        if type(other) == type(self):
            return other.c_address() == self.c_address()
        elif type(other) == c_void_p:
            return other.value == self.c_address()

    def c_address(self):
        """
        Return the address of the object pointer in c.  Useful for comparison.
        """
        return addressof(self._as_parameter_.contents)

    def __bool__(self):
        "Determine whether the object is valid by converting to boolean" # Python 3
        return self._as_parameter_.__bool__()

    def __nonzero__(self):
        "Determine whether the object is valid by converting to boolean" # Python 2
        return self._as_parameter_.__nonzero__()

    def actor(self):
        """
        Return actor, when caller wants to work with multiple actors and/or
input sockets asynchronously.
        """
        return czmq.Zactor(lib.mlm_client_actor(self._as_parameter_), False)

    def msgpipe(self):
        """
        Return message pipe for asynchronous message I/O. In the high-volume case,
we send methods and get replies to the actor, in a synchronous manner, and
we send/recv high volume message data to a second pipe, the msgpipe. In
the low-volume case we can do everything over the actor pipe, if traffic
is never ambiguous.
        """
        return czmq.Zsock(lib.mlm_client_msgpipe(self._as_parameter_), False)

    def connected(self):
        """
        Return true if client is currently connected, else false. Note that the
client will automatically re-connect if the server dies and restarts after
a successful first connection.
        """
        return lib.mlm_client_connected(self._as_parameter_)

    def set_plain_auth(self, username, password):
        """
        Set PLAIN authentication username and password. If you do not call this, the    
client will use NULL authentication. TODO: add "set curve auth".                
Returns >= 0 if successful, -1 if interrupted.
        """
        return lib.mlm_client_set_plain_auth(self._as_parameter_, username, password)

    def connect(self, endpoint, timeout, address):
        """
        Connect to server endpoint, with specified timeout in msecs (zero means wait    
forever). Constructor succeeds if connection is successful. The caller may      
specify its address.                                                            
Returns >= 0 if successful, -1 if interrupted.
        """
        return lib.mlm_client_connect(self._as_parameter_, endpoint, timeout, address)

    def set_producer(self, stream):
        """
        Prepare to publish to a specified stream. After this, all messages are sent to  
this stream exclusively.                                                        
Returns >= 0 if successful, -1 if interrupted.
        """
        return lib.mlm_client_set_producer(self._as_parameter_, stream)

    def set_consumer(self, stream, pattern):
        """
        Consume messages with matching subjects. The pattern is a regular expression    
using the CZMQ zrex syntax. The most useful elements are: ^ and $ to match the  
start and end, . to match any character, \s and \S to match whitespace and      
non-whitespace, \d and \D to match a digit and non-digit, \a and \A to match    
alphabetic and non-alphabetic, \w and \W to match alphanumeric and              
non-alphanumeric, + for one or more repetitions, * for zero or more repetitions,
and ( ) to create groups. Returns 0 if subscription was successful, else -1.    
Returns >= 0 if successful, -1 if interrupted.
        """
        return lib.mlm_client_set_consumer(self._as_parameter_, stream, pattern)

    def set_worker(self, address, pattern):
        """
        Offer a particular named service, where the pattern matches request subjects    
using the CZMQ zrex syntax.                                                     
Returns >= 0 if successful, -1 if interrupted.
        """
        return lib.mlm_client_set_worker(self._as_parameter_, address, pattern)

    def send(self, subject, content):
        """
        Send STREAM SEND message to server, takes ownership of message
and destroys message when done sending it.
        """
        return lib.mlm_client_send(self._as_parameter_, subject, byref(czmq.zmsg_p.from_param(content)))

    def sendto(self, address, subject, tracker, timeout, content):
        """
        Send MAILBOX SEND message to server, takes ownership of message
and destroys message when done sending it.
        """
        return lib.mlm_client_sendto(self._as_parameter_, address, subject, tracker, timeout, byref(czmq.zmsg_p.from_param(content)))

    def sendfor(self, address, subject, tracker, timeout, content):
        """
        Send SERVICE SEND message to server, takes ownership of message
and destroys message when done sending it.
        """
        return lib.mlm_client_sendfor(self._as_parameter_, address, subject, tracker, timeout, byref(czmq.zmsg_p.from_param(content)))

    def recv(self):
        """
        Receive message from server; caller destroys message when done
        """
        return czmq.Zmsg(lib.mlm_client_recv(self._as_parameter_), True)

    def command(self):
        """
        Return last received command. Can be one of these values:
    "STREAM DELIVER"
    "MAILBOX DELIVER"
    "SERVICE DELIVER"
        """
        return lib.mlm_client_command(self._as_parameter_)

    def status(self):
        """
        Return last received status
        """
        return lib.mlm_client_status(self._as_parameter_)

    def reason(self):
        """
        Return last received reason
        """
        return lib.mlm_client_reason(self._as_parameter_)

    def address(self):
        """
        Return last received address
        """
        return lib.mlm_client_address(self._as_parameter_)

    def sender(self):
        """
        Return last received sender
        """
        return lib.mlm_client_sender(self._as_parameter_)

    def subject(self):
        """
        Return last received subject
        """
        return lib.mlm_client_subject(self._as_parameter_)

    def content(self):
        """
        Return last received content
        """
        return czmq.Zmsg(lib.mlm_client_content(self._as_parameter_), False)

    def tracker(self):
        """
        Return last received tracker
        """
        return lib.mlm_client_tracker(self._as_parameter_)

    def sendx(self, subject, content, *args):
        """
        Send multipart string message to stream, end list with NULL
Returns 0 if OK, -1 if failed due to lack of memory or other error.
        """
        return lib.mlm_client_sendx(self._as_parameter_, subject, content, *args)

    def sendtox(self, address, subject, content, *args):
        """
        Send multipart string to mailbox, end list with NULL
Returns 0 if OK, -1 if failed due to lack of memory or other error.
        """
        return lib.mlm_client_sendtox(self._as_parameter_, address, subject, content, *args)
